--- a/website/src/components/SupporterGrid/styles.module.css
+++ b/website/src/components/SupporterGrid/styles.module.css
@@ -27,7 +27,10 @@
     padding: 0.5rem 0.5rem;
     box-shadow: inset 0 20px 40px -20px rgba(0, 0, 0, 0.05);
 }
-
+[data-theme="dark"] .purlGridContainer {
+    background-color: #202020;
+    box-shadow: inset 0 0 6px #0000001a;
+}
 /* Container for the grid */
 .purlGrid {
     display: flex;
